[project]
name = "llm_crag_llamaindex"
version = "0.1.0"
description = "Example LLM CRAG using LlamaIndex workflows and Streamlit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastembed>=0.6.0",
    "ipython>=9.0.2",
    "llama-index>=0.12.25",
    "llama-index-embeddings-fastembed>=0.3.0",
    "llama-index-llms-ollama>=0.5.3",
    "llama-index-tools-linkup-research>=0.3.0",
    "llama-index-vector-stores-qdrant>=0.5.0",
    "ollama>=0.4.7",
    "qdrant-client>=1.13.3",
    "streamlit>=1.43.2",
]
